fixed image overlap, animation not fixed yet

--- a/blocks/main/kaufman/kaufman.css
+++ b/blocks/main/kaufman/kaufman.css
@@ -4,4 +4,7 @@
   position: relative;
   overflow: hidden;
   background-color: #1f1f1f;
+  z-index: 10;
+  top: -200px;
+  margin-bottom: -200px;
 }
