--- a/blocks/main/resources/resources.css
+++ b/blocks/main/resources/resources.css
@@ -1,4 +1,7 @@
 .resources {
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
